tests/baselines/reference/generatorES6_3.errors.txt
tests/cases/compiler/generatorES6_3.ts(1,17): error TS9001: Generators are not currently supported.
tests/cases/compiler/generatorES6_3.ts(2,5): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/compiler/generatorES6_3.ts (2 errors) ====
    var v = function*() {
                    ~
!!! error TS9001: Generators are not currently supported.
        yield 0
        ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.
    }